--- a/vue-music/package.json
+++ b/vue-music/package.json
@@ -10,6 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "better-scroll": "1.7.2",
+    "express": "^4.16.3",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
